fix: fix toList to collect